--- a/circular.html
+++ b/circular.html
@@ -10,6 +10,6 @@
 </head>
 <body>
 	<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
-	<script src="circular.js"></script>
+	<script src="https://rawgit.com/G0rd0nHe/gordonhe/master/circular.js"></script>
 </body>
 </html>
